[gd_scene load_steps=4 format=3 uid="uid://86tsdexohbg4"]

[ext_resource type="Script" path="res://scripts/menus/death_menu.gd" id="1_qinvd"]
[ext_resource type="FontFile" uid="uid://dbrf4uwq560ck" path="res://assets/fonts/PixelOperator8.ttf" id="1_vrx8g"]
[ext_resource type="Script" path="res://scripts/tools/ui/ready_grab_focus.gd" id="3_sodka"]

[node name="death_menu" type="CanvasLayer"]
script = ExtResource("1_qinvd")

[node name="window" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="death_label" type="Label" parent="window"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -38.01
offset_right = 51.0
offset_bottom = -22.01
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.643137, 0.160784, 0.235294, 1)
theme_override_fonts/font = ExtResource("1_vrx8g")
theme_override_font_sizes/font_size = 16
text = "YOU DIED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="cheesy_label" type="Label" parent="window"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -18.41
offset_right = 82.5
offset_bottom = -10.41
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.643137, 0.160784, 0.235294, 1)
theme_override_fonts/font = ExtResource("1_vrx8g")
theme_override_font_sizes/font_size = 8
text = "It ain't easy being cheesy."
horizontal_alignment = 1

[node name="restart_button" type="Button" parent="window"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = 10.0
offset_right = 57.5
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_vrx8g")
theme_override_font_sizes/font_size = 8
text = "Restart level (R)"
script = ExtResource("3_sodka")

[node name="back_button" type="Button" parent="window"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = 30.0
offset_right = 72.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_vrx8g")
theme_override_font_sizes/font_size = 8
text = "Return to level select"

[connection signal="pressed" from="window/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="window/back_button" to="." method="_on_back_button_pressed"]
